syntax = "proto3";

package sjchat.messages;

import "user-service.proto";

option java_multiple_files = true;
option java_package = "sjchat.messages";
option java_outer_classname = "MessageServiceProto";

service MessageService {
    rpc getChatList(ChatListRequest) returns (ChatListResponse);
    rpc createChat(ChatDataRequest) returns (ChatResponse);
    rpc getChat(ChatRequest) returns (ChatResponse);
    rpc updateChat(ChatDataRequest) returns (ChatResponse);
    rpc getMessages(MessageListRequest) returns (MessageListResponse);
    rpc sendMessage(NewMessageRequest) returns (MessageResponse);
}

message ChatListRequest {
}

message ChatListResponse {
    repeated Chat chats = 1;
}

message ChatRequest {
    string id = 1;
}

message ChatDataRequest {
    string id = 1;
    string title = 2;
    repeated string users = 3;
}

message MessageListRequest {
    string chatId = 1;
}

message MessageListResponse {
    repeated Message messages = 1;
}

message NewMessageRequest {
    string message = 1;
}

message ChatResponse {
    Chat chat = 1;
}

message MessageResponse {
    Message message = 1;
}

message Chat {
    string id = 1;
    string title = 2;
    repeated sjchat.users.User users = 3;
}

message Message {
    string id = 1;
    string message = 2;
    string user = 3;
}
