syntax = "proto3";

package sjchat.users;

option java_multiple_files = true;
option java_package = "sjchat.users";
option java_outer_classname = "UserServiceProto";

service UserService {
    rpc createUser (UserDataRequest) returns (UserResponse);
    rpc getUser (UserRequest) returns (UserResponse);
    rpc updateUser (UserDataRequest) returns (UserResponse);
}

message User {
    string id = 1;
    string username = 2;
}

message UserDataRequest {
    string id = 1;
    string username = 2;
}

message UserRequest {
    string id = 1;
}

message UserResponse {
    User user = 1;
}
